# mapmaker

./: .gitignore  CHANGE.ME  CMakeLists.txt  COVER.ME  FEED.ME  INSTALL.ME  Makefile  READ.ME  README.md  WANT.ME  mouse.in  mouse.prep  mouse.raw  sample.in  sample.inp  sample.inq  sample.qtls  sample.raw  sample.xdata  sample.xmaps  sample.xqtls  sample.xtraits
aux/: .cshrc  aux.faq
ghostscript/: gs  lib.tr  obj.tr
lib/: eqn.c  eqn.h  histogrm.c  histogrm.h  iolib.c  iolib.h  makehelp.c  mathlib.c  mathlib.h  memlib.c  memlib.h  misclib.h  msglib.c  msglib.h  shell.c  shell.h  stats.c  stats.h  strlib.c  strlib.h  syscode.c  syscode.h  system.h  table.c  table.h
makehelp/: makehelp.c
mapm/: auto_cmd.c  chroms.c  ctm.c  database.c  info.c  lowlevel.h  main.c  map_info.h  mapm.h  mapmhelp.src  maps.c  npt_cmds.c  orders.c  print.c  ps_maps.c  quick23.c  reader.c  sequence.c  state.c  sys_cmds.c  threads.c  threads.h  toplevel.h  two_cmds.c
quant/: qcmds.c  qcontext.c  qctm.c  qdata.c  qlow.h  qmap.h  qprint.c  qps_scan.c  qraw.c  qseq.c  qtl.h  qtlhelp.c  qtlhelp.src  qtop.c  qtop.h  qwiggle.c
readline/: Makefile.aux  Makefile.sparc  readline.c  readline.h
sun/: xmapmaker  xqtl
